--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -191,12 +191,12 @@
 
 #services-section,
 #contact-section {
-    background-color: #040e1c;
+    background-color: #111;
 }
 
 #about-section,
 #projects-section {
-    background-color: #0f142c;
+    background-color: #051e2d;
 }
 
 
