--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -65,14 +65,14 @@
 .btn.btn-white.btn-outline-white:hover,
 .bg-primary,
 .bg-primary {
-    background-color: #3877b6 !important;
+    background-color: #b5262b !important;
 }
 
 .ftco-navbar-light .navbar-nav>.nav-item.cta>a,
 .ftco-navbar-light .navbar-nav>.nav-item.cta>a:hover,
 .owl-carousel.home-slider .slider-item .slider-text .btn-custom,
 .btn.btn-primary {
-    border: 1px solid #3877b6 !important;
+    border: 1px solid #b5262b !important;
 }
 
 .btn.btn-primary:hover {
