--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -65,6 +65,7 @@
 .bg-primary,
 .bg-primary {
     background-color: #b5262b !important;
+    color: #fff !important;
 }
 
 .ftco-navbar-light .navbar-nav>.nav-item.cta>a,
@@ -73,10 +74,14 @@
 .btn.btn-primary {
     border: 1px solid #b5262b !important;
 }
+.ftco-hireme {
+    padding: 15em 0 !important;
+}
 .ftco-hireme.img {
     background-size: contain;
     background-color: #000;
 }
+
 .btn.btn-primary:hover {
     background-color: #000 !important;
     color: #fff !important;
@@ -112,7 +117,10 @@
 .ftco-footer {
     padding: 4em 0;
 }
+.ftco-section {
+    padding: 5em 0;
 
+}
 /* banner styles */
 
 .banner-container {
@@ -159,7 +167,26 @@
 .swiper-pagination-bullet-active {
     background: #3877b6 !important;
 }
-
+.contact-section .box {
+    background: rgba(255,255,255,0.05);
+}
+.icon-twitter:before {
+    content: "";
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    background-image: url('https://simpleicons.org/icons/x.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    vertical-align: middle;
+    filter: brightness(0) saturate(100%) invert(100%) opacity(0.6);
+  }
+  .icon img {
+    height: 64px;
+  }
+  .services-1 {
+    padding-bottom: 0;
+  }
 @media (max-width: 992px) {
     .banner-container {
         height: 420px;
@@ -176,7 +203,9 @@
         justify-content: center;
         text-align: center;
     }
-
+    .ftco-hireme {
+        padding: 8em 0 !important;
+    }
 }
 
 /** additional styles **/
